translator/translatorParser.cpp

// Generated from translator.g4 by ANTLR 4.13.2


#include "translatorVisitor.h"

#include "translatorParser.h"


using namespace antlrcpp;

using namespace antlr4;

namespace {

struct TranslatorParserStaticData final {
  TranslatorParserStaticData(std::vector<std::string> ruleNames,
                        std::vector<std::string> literalNames,
                        std::vector<std::string> symbolicNames)
      : ruleNames(std::move(ruleNames)), literalNames(std::move(literalNames)),
        symbolicNames(std::move(symbolicNames)),
        vocabulary(this->literalNames, this->symbolicNames) {}

  TranslatorParserStaticData(const TranslatorParserStaticData&) = delete;
  TranslatorParserStaticData(TranslatorParserStaticData&&) = delete;
  TranslatorParserStaticData& operator=(const TranslatorParserStaticData&) = delete;
  TranslatorParserStaticData& operator=(TranslatorParserStaticData&&) = delete;

  std::vector<antlr4::dfa::DFA> decisionToDFA;
  antlr4::atn::PredictionContextCache sharedContextCache;
  const std::vector<std::string> ruleNames;
  const std::vector<std::string> literalNames;
  const std::vector<std::string> symbolicNames;
  const antlr4::dfa::Vocabulary vocabulary;
  antlr4::atn::SerializedATNView serializedATN;
  std::unique_ptr<antlr4::atn::ATN> atn;
};

::antlr4::internal::OnceFlag translatorParserOnceFlag;
#if ANTLR4_USE_THREAD_LOCAL_CACHE
static thread_local
#endif
std::unique_ptr<TranslatorParserStaticData> translatorParserStaticData = nullptr;

void translatorParserInitialize() {
#if ANTLR4_USE_THREAD_LOCAL_CACHE
  if (translatorParserStaticData != nullptr) {
    return;
  }
#else
  assert(translatorParserStaticData == nullptr);
#endif
  auto staticData = std::make_unique<TranslatorParserStaticData>(
    std::vector<std::string>{
      "expr", "arth_expr", "term", "power", "factor", "compare", "logic_expr", 
      "logic_term", "logic_factor", "elif", "while", "functions", "row", 
      "prog"
    },
    std::vector<std::string>{
      "", "'if'", "'{'", "'}'", "'elif'", "'else'", "'while'", "'print'", 
      "'abs'", "'sqrt'", "'max'", "','", "'min'", "", "", "", "'-'", "'+'", 
      "'/'", "'*'", "'^'", "'++'", "'--'", "'=='", "'!='", "'<'", "'<='", 
      "'>'", "'>='", "'||'", "'&&'", "'!'", "';'", "'='", "'+='", "'-='", 
      "'*='", "'/='", "'('", "')'"
    },
    std::vector<std::string>{
      "", "", "", "", "", "", "", "", "", "", "", "", "", "INT", "FLOAT", 
      "VAR", "SUB", "ADD", "DIV", "MUL", "POW", "INC", "DEC", "EQ", "NE", 
      "LS", "LE", "GT", "GE", "OR", "AND", "NOT", "SEP", "ASGN", "ADD_ASGN", 
      "SUB_ASGN", "MUL_ASGN", "DIV_ASGN", "LBR", "RBR", "WS"
    }
  );
  staticData->serializedATN = antlr4::atn::SerializedATNView(serializedATNSegment, sizeof(serializedATNSegment) / sizeof(serializedATNSegment[0]));

  antlr4::atn::ATNDeserializer deserializer;
  staticData->atn = deserializer.deserialize(staticData->serializedATN);

  const size_t count = staticData->atn->getNumberOfDecisions();
  staticData->decisionToDFA.reserve(count);
  for (size_t i = 0; i < count; i++) { 
    staticData->decisionToDFA.emplace_back(staticData->atn->getDecisionState(i), i);
  }
  translatorParserStaticData = std::move(staticData);
}

}

translatorParser::translatorParser(TokenStream *input) : translatorParser(input, antlr4::atn::ParserATNSimulatorOptions()) {}

translatorParser::translatorParser(TokenStream *input, const antlr4::atn::ParserATNSimulatorOptions &options) : Parser(input) {
  translatorParser::initialize();
  _interpreter = new atn::ParserATNSimulator(this, *translatorParserStaticData->atn, translatorParserStaticData->decisionToDFA, translatorParserStaticData->sharedContextCache, options);
}

translatorParser::~translatorParser() {
  delete _interpreter;
}

const atn::ATN& translatorParser::getATN() const {
  return *translatorParserStaticData->atn;
}

std::string translatorParser::getGrammarFileName() const {
  return "translator.g4";
}

const std::vector<std::string>& translatorParser::getRuleNames() const {
  return translatorParserStaticData->ruleNames;
}

const dfa::Vocabulary& translatorParser::getVocabulary() const {
  return translatorParserStaticData->vocabulary;
}

antlr4::atn::SerializedATNView translatorParser::getSerializedATN() const {
  return translatorParserStaticData->serializedATN;
}


//----------------- ExprContext ------------------------------------------------------------------

translatorParser::ExprContext::ExprContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}


size_t translatorParser::ExprContext::getRuleIndex() const {
  return translatorParser::RuleExpr;
}

void translatorParser::ExprContext::copyFrom(ExprContext *ctx) {
  ParserRuleContext::copyFrom(ctx);
}

//----------------- Logic_expr_nodeContext ------------------------------------------------------------------

translatorParser::Logic_exprContext* translatorParser::Logic_expr_nodeContext::logic_expr() {
  return getRuleContext<translatorParser::Logic_exprContext>(0);
}

translatorParser::Logic_expr_nodeContext::Logic_expr_nodeContext(ExprContext *ctx) { copyFrom(ctx); }


std::any translatorParser::Logic_expr_nodeContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<translatorVisitor*>(visitor))
    return parserVisitor->visitLogic_expr_node(this);
  else
    return visitor->visitChildren(this);
}
//----------------- Arth_expr_nodeContext ------------------------------------------------------------------

translatorParser::Arth_exprContext* translatorParser::Arth_expr_nodeContext::arth_expr() {
  return getRuleContext<translatorParser::Arth_exprContext>(0);
}

translatorParser::Arth_expr_nodeContext::Arth_expr_nodeContext(ExprContext *ctx) { copyFrom(ctx); }


std::any translatorParser::Arth_expr_nodeContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<translatorVisitor*>(visitor))
    return parserVisitor->visitArth_expr_node(this);
  else
    return visitor->visitChildren(this);
}
//----------------- Functions_nodeContext ------------------------------------------------------------------

translatorParser::FunctionsContext* translatorParser::Functions_nodeContext::functions() {
  return getRuleContext<translatorParser::FunctionsContext>(0);
}

translatorParser::Functions_nodeContext::Functions_nodeContext(ExprContext *ctx) { copyFrom(ctx); }


std::any translatorParser::Functions_nodeContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<translatorVisitor*>(visitor))
    return parserVisitor->visitFunctions_node(this);
  else
    return visitor->visitChildren(this);
}
translatorParser::ExprContext* translatorParser::expr() {
  ExprContext *_localctx = _tracker.createInstance<ExprContext>(_ctx, getState());
  enterRule(_localctx, 0, translatorParser::RuleExpr);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(31);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 0, _ctx)) {
    case 1: {
      _localctx = _tracker.createInstance<translatorParser::Arth_expr_nodeContext>(_localctx);
      enterOuterAlt(_localctx, 1);
      setState(28);
      arth_expr(0);
      break;
    }

    case 2: {
      _localctx = _tracker.createInstance<translatorParser::Logic_expr_nodeContext>(_localctx);
      enterOuterAlt(_localctx, 2);
      setState(29);
      logic_expr();
      break;
    }

    case 3: {
      _localctx = _tracker.createInstance<translatorParser::Functions_nodeContext>(_localctx);
      enterOuterAlt(_localctx, 3);
      setState(30);
      functions();
      break;
    }

    default:
      break;
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Arth_exprContext ------------------------------------------------------------------

translatorParser::Arth_exprContext::Arth_exprContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}


size_t translatorParser::Arth_exprContext::getRuleIndex() const {
  return translatorParser::RuleArth_expr;
}

void translatorParser::Arth_exprContext::copyFrom(Arth_exprContext *ctx) {
  ParserRuleContext::copyFrom(ctx);
}

//----------------- Term_ADD_SUB_exprContext ------------------------------------------------------------------

translatorParser::Arth_exprContext* translatorParser::Term_ADD_SUB_exprContext::arth_expr() {
  return getRuleContext<translatorParser::Arth_exprContext>(0);
}

translatorParser::TermContext* translatorParser::Term_ADD_SUB_exprContext::term() {
  return getRuleContext<translatorParser::TermContext>(0);
}

tree::TerminalNode* translatorParser::Term_ADD_SUB_exprContext::ADD() {
  return getToken(translatorParser::ADD, 0);
}

tree::TerminalNode* translatorParser::Term_ADD_SUB_exprContext::SUB() {
  return getToken(translatorParser::SUB, 0);
}

translatorParser::Term_ADD_SUB_exprContext::Term_ADD_SUB_exprContext(Arth_exprContext *ctx) { copyFrom(ctx); }


std::any translatorParser::Term_ADD_SUB_exprContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<translatorVisitor*>(visitor))
    return parserVisitor->visitTerm_ADD_SUB_expr(this);
  else
    return visitor->visitChildren(this);
}
//----------------- Term_nodeContext ------------------------------------------------------------------

translatorParser::TermContext* translatorParser::Term_nodeContext::term() {
  return getRuleContext<translatorParser::TermContext>(0);
}

translatorParser::Term_nodeContext::Term_nodeContext(Arth_exprContext *ctx) { copyFrom(ctx); }


std::any translatorParser::Term_nodeContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<translatorVisitor*>(visitor))
    return parserVisitor->visitTerm_node(this);
  else
    return visitor->visitChildren(this);
}

translatorParser::Arth_exprContext* translatorParser::arth_expr() {
   return arth_expr(0);
}

translatorParser::Arth_exprContext* translatorParser::arth_expr(int precedence) {
  ParserRuleContext *parentContext = _ctx;
  size_t parentState = getState();
  translatorParser::Arth_exprContext *_localctx = _tracker.createInstance<Arth_exprContext>(_ctx, parentState);
  translatorParser::Arth_exprContext *previousContext = _localctx;
  (void)previousContext; // Silence compiler, in case the context is not used by generated code.
  size_t startState = 2;
  enterRecursionRule(_localctx, 2, translatorParser::RuleArth_expr, precedence);

    size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    unrollRecursionContexts(parentContext);
  });
  try {
    size_t alt;
    enterOuterAlt(_localctx, 1);
    _localctx = _tracker.createInstance<Term_nodeContext>(_localctx);
    _ctx = _localctx;
    previousContext = _localctx;

    setState(34);
    term(0);
    _ctx->stop = _input->LT(-1);
    setState(41);
    _errHandler->sync(this);
    alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 1, _ctx);
    while (alt != 2 && alt != atn::ATN::INVALID_ALT_NUMBER) {
      if (alt == 1) {
        if (!_parseListeners.empty())
          triggerExitRuleEvent();
        previousContext = _localctx;
        auto newContext = _tracker.createInstance<Term_ADD_SUB_exprContext>(_tracker.createInstance<Arth_exprContext>(parentContext, parentState));
        _localctx = newContext;
        pushNewRecursionContext(newContext, startState, RuleArth_expr);
        setState(36);

        if (!(precpred(_ctx, 2))) throw FailedPredicateException(this, "precpred(_ctx, 2)");
        setState(37);
        _la = _input->LA(1);
        if (!(_la == translatorParser::SUB

        || _la == translatorParser::ADD)) {
        _errHandler->recoverInline(this);
        }
        else {
          _errHandler->reportMatch(this);
          consume();
        }
        setState(38);
        term(0); 
      }
      setState(43);
      _errHandler->sync(this);
      alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 1, _ctx);
    }
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }
  return _localctx;
}

//----------------- TermContext ------------------------------------------------------------------

translatorParser::TermContext::TermContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}


size_t translatorParser::TermContext::getRuleIndex() const {
  return translatorParser::RuleTerm;
}

void translatorParser::TermContext::copyFrom(TermContext *ctx) {
  ParserRuleContext::copyFrom(ctx);
}

//----------------- Power_nodeContext ------------------------------------------------------------------

translatorParser::PowerContext* translatorParser::Power_nodeContext::power() {
  return getRuleContext<translatorParser::PowerContext>(0);
}

translatorParser::Power_nodeContext::Power_nodeContext(TermContext *ctx) { copyFrom(ctx); }


std::any translatorParser::Power_nodeContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<translatorVisitor*>(visitor))
    return parserVisitor->visitPower_node(this);
  else
    return visitor->visitChildren(this);
}
//----------------- Power_MUL_DIV_termContext ------------------------------------------------------------------

translatorParser::TermContext* translatorParser::Power_MUL_DIV_termContext::term() {
  return getRuleContext<translatorParser::TermContext>(0);
}

translatorParser::PowerContext* translatorParser::Power_MUL_DIV_termContext::power() {
  return getRuleContext<translatorParser::PowerContext>(0);
}

tree::TerminalNode* translatorParser::Power_MUL_DIV_termContext::MUL() {
  return getToken(translatorParser::MUL, 0);
}

tree::TerminalNode* translatorParser::Power_MUL_DIV_termContext::DIV() {
  return getToken(translatorParser::DIV, 0);
}

translatorParser::Power_MUL_DIV_termContext::Power_MUL_DIV_termContext(TermContext *ctx) { copyFrom(ctx); }


std::any translatorParser::Power_MUL_DIV_termContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<translatorVisitor*>(visitor))
    return parserVisitor->visitPower_MUL_DIV_term(this);
  else
    return visitor->visitChildren(this);
}

translatorParser::TermContext* translatorParser::term() {
   return term(0);
}

translatorParser::TermContext* translatorParser::term(int precedence) {
  ParserRuleContext *parentContext = _ctx;
  size_t parentState = getState();
  translatorParser::TermContext *_localctx = _tracker.createInstance<TermContext>(_ctx, parentState);
  translatorParser::TermContext *previousContext = _localctx;
  (void)previousContext; // Silence compiler, in case the context is not used by generated code.
  size_t startState = 4;
  enterRecursionRule(_localctx, 4, translatorParser::RuleTerm, precedence);

    size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    unrollRecursionContexts(parentContext);
  });
  try {
    size_t alt;
    enterOuterAlt(_localctx, 1);
    _localctx = _tracker.createInstance<Power_nodeContext>(_localctx);
    _ctx = _localctx;
    previousContext = _localctx;

    setState(45);
    power();
    _ctx->stop = _input->LT(-1);
    setState(52);
    _errHandler->sync(this);
    alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 2, _ctx);
    while (alt != 2 && alt != atn::ATN::INVALID_ALT_NUMBER) {
      if (alt == 1) {
        if (!_parseListeners.empty())
          triggerExitRuleEvent();
        previousContext = _localctx;
        auto newContext = _tracker.createInstance<Power_MUL_DIV_termContext>(_tracker.createInstance<TermContext>(parentContext, parentState));
        _localctx = newContext;
        pushNewRecursionContext(newContext, startState, RuleTerm);
        setState(47);

        if (!(precpred(_ctx, 2))) throw FailedPredicateException(this, "precpred(_ctx, 2)");
        setState(48);
        _la = _input->LA(1);
        if (!(_la == translatorParser::DIV

        || _la == translatorParser::MUL)) {
        _errHandler->recoverInline(this);
        }
        else {
          _errHandler->reportMatch(this);
          consume();
        }
        setState(49);
        power(); 
      }
      setState(54);
      _errHandler->sync(this);
      alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 2, _ctx);
    }
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }
  return _localctx;
}

//----------------- PowerContext ------------------------------------------------------------------

translatorParser::PowerContext::PowerContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}


size_t translatorParser::PowerContext::getRuleIndex() const {
  return translatorParser::RulePower;
}

void translatorParser::PowerContext::copyFrom(PowerContext *ctx) {
  ParserRuleContext::copyFrom(ctx);
}

//----------------- POW_nodeContext ------------------------------------------------------------------

translatorParser::FactorContext* translatorParser::POW_nodeContext::factor() {
  return getRuleContext<translatorParser::FactorContext>(0);
}

tree::TerminalNode* translatorParser::POW_nodeContext::POW() {
  return getToken(translatorParser::POW, 0);
}

translatorParser::PowerContext* translatorParser::POW_nodeContext::power() {
  return getRuleContext<translatorParser::PowerContext>(0);
}

translatorParser::POW_nodeContext::POW_nodeContext(PowerContext *ctx) { copyFrom(ctx); }


std::any translatorParser::POW_nodeContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<translatorVisitor*>(visitor))
    return parserVisitor->visitPOW_node(this);
  else
    return visitor->visitChildren(this);
}
//----------------- Factor_nodeContext ------------------------------------------------------------------

translatorParser::FactorContext* translatorParser::Factor_nodeContext::factor() {
  return getRuleContext<translatorParser::FactorContext>(0);
}

translatorParser::Factor_nodeContext::Factor_nodeContext(PowerContext *ctx) { copyFrom(ctx); }


std::any translatorParser::Factor_nodeContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<translatorVisitor*>(visitor))
    return parserVisitor->visitFactor_node(this);
  else
    return visitor->visitChildren(this);
}
translatorParser::PowerContext* translatorParser::power() {
  PowerContext *_localctx = _tracker.createInstance<PowerContext>(_ctx, getState());
  enterRule(_localctx, 6, translatorParser::RulePower);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(60);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 3, _ctx)) {
    case 1: {
      _localctx = _tracker.createInstance<translatorParser::POW_nodeContext>(_localctx);
      enterOuterAlt(_localctx, 1);
      setState(55);
      factor();
      setState(56);
      match(translatorParser::POW);
      setState(57);
      power();
      break;
    }

    case 2: {
      _localctx = _tracker.createInstance<translatorParser::Factor_nodeContext>(_localctx);
      enterOuterAlt(_localctx, 2);
      setState(59);
      factor();
      break;
    }

    default:
      break;
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- FactorContext ------------------------------------------------------------------

translatorParser::FactorContext::FactorContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}


size_t translatorParser::FactorContext::getRuleIndex() const {
  return translatorParser::RuleFactor;
}

void translatorParser::FactorContext::copyFrom(FactorContext *ctx) {
  ParserRuleContext::copyFrom(ctx);
}

//----------------- VARIABLE_nodeContext ------------------------------------------------------------------

tree::TerminalNode* translatorParser::VARIABLE_nodeContext::VAR() {
  return getToken(translatorParser::VAR, 0);
}

tree::TerminalNode* translatorParser::VARIABLE_nodeContext::ADD() {
  return getToken(translatorParser::ADD, 0);
}

tree::TerminalNode* translatorParser::VARIABLE_nodeContext::SUB() {
  return getToken(translatorParser::SUB, 0);
}

translatorParser::VARIABLE_nodeContext::VARIABLE_nodeContext(FactorContext *ctx) { copyFrom(ctx); }


std::any translatorParser::VARIABLE_nodeContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<translatorVisitor*>(visitor))
    return parserVisitor->visitVARIABLE_node(this);
  else
    return visitor->visitChildren(this);
}
//----------------- FLOAT_nodeContext ------------------------------------------------------------------

tree::TerminalNode* translatorParser::FLOAT_nodeContext::FLOAT() {
  return getToken(translatorParser::FLOAT, 0);
}

tree::TerminalNode* translatorParser::FLOAT_nodeContext::ADD() {
  return getToken(translatorParser::ADD, 0);
}

tree::TerminalNode* translatorParser::FLOAT_nodeContext::SUB() {
  return getToken(translatorParser::SUB, 0);
}

translatorParser::FLOAT_nodeContext::FLOAT_nodeContext(FactorContext *ctx) { copyFrom(ctx); }


std::any translatorParser::FLOAT_nodeContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<translatorVisitor*>(visitor))
    return parserVisitor->visitFLOAT_node(this);
  else
    return visitor->visitChildren(this);
}
//----------------- LBR_expr_RBRContext ------------------------------------------------------------------

tree::TerminalNode* translatorParser::LBR_expr_RBRContext::LBR() {
  return getToken(translatorParser::LBR, 0);
}

translatorParser::Arth_exprContext* translatorParser::LBR_expr_RBRContext::arth_expr() {
  return getRuleContext<translatorParser::Arth_exprContext>(0);
}

tree::TerminalNode* translatorParser::LBR_expr_RBRContext::RBR() {
  return getToken(translatorParser::RBR, 0);
}

tree::TerminalNode* translatorParser::LBR_expr_RBRContext::ADD() {
  return getToken(translatorParser::ADD, 0);
}

tree::TerminalNode* translatorParser::LBR_expr_RBRContext::SUB() {
  return getToken(translatorParser::SUB, 0);
}

translatorParser::LBR_expr_RBRContext::LBR_expr_RBRContext(FactorContext *ctx) { copyFrom(ctx); }


std::any translatorParser::LBR_expr_RBRContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<translatorVisitor*>(visitor))
    return parserVisitor->visitLBR_expr_RBR(this);
  else
    return visitor->visitChildren(this);
}
//----------------- INTEGER_nodeContext ------------------------------------------------------------------

tree::TerminalNode* translatorParser::INTEGER_nodeContext::INT() {
  return getToken(translatorParser::INT, 0);
}

tree::TerminalNode* translatorParser::INTEGER_nodeContext::ADD() {
  return getToken(translatorParser::ADD, 0);
}

tree::TerminalNode* translatorParser::INTEGER_nodeContext::SUB() {
  return getToken(translatorParser::SUB, 0);
}

translatorParser::INTEGER_nodeContext::INTEGER_nodeContext(FactorContext *ctx) { copyFrom(ctx); }


std::any translatorParser::INTEGER_nodeContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<translatorVisitor*>(visitor))
    return parserVisitor->visitINTEGER_node(this);
  else
    return visitor->visitChildren(this);
}
translatorParser::FactorContext* translatorParser::factor() {
  FactorContext *_localctx = _tracker.createInstance<FactorContext>(_ctx, getState());
  enterRule(_localctx, 8, translatorParser::RuleFactor);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(81);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 8, _ctx)) {
    case 1: {
      _localctx = _tracker.createInstance<translatorParser::LBR_expr_RBRContext>(_localctx);
      enterOuterAlt(_localctx, 1);
      setState(63);
      _errHandler->sync(this);

      _la = _input->LA(1);
      if (_la == translatorParser::SUB

      || _la == translatorParser::ADD) {
        setState(62);
        _la = _input->LA(1);
        if (!(_la == translatorParser::SUB

        || _la == translatorParser::ADD)) {
        _errHandler->recoverInline(this);
        }
        else {
          _errHandler->reportMatch(this);
          consume();
        }
      }
      setState(65);
      match(translatorParser::LBR);
      setState(66);
      arth_expr(0);
      setState(67);
      match(translatorParser::RBR);
      break;
    }

    case 2: {
      _localctx = _tracker.createInstance<translatorParser::INTEGER_nodeContext>(_localctx);
      enterOuterAlt(_localctx, 2);
      setState(70);
      _errHandler->sync(this);

      _la = _input->LA(1);
      if (_la == translatorParser::SUB

      || _la == translatorParser::ADD) {
        setState(69);
        _la = _input->LA(1);
        if (!(_la == translatorParser::SUB

        || _la == translatorParser::ADD)) {
        _errHandler->recoverInline(this);
        }
        else {
          _errHandler->reportMatch(this);
          consume();
        }
      }
      setState(72);
      match(translatorParser::INT);
      break;
    }

    case 3: {
      _localctx = _tracker.createInstance<translatorParser::FLOAT_nodeContext>(_localctx);
      enterOuterAlt(_localctx, 3);
      setState(74);
      _errHandler->sync(this);

      _la = _input->LA(1);
      if (_la == translatorParser::SUB

      || _la == translatorParser::ADD) {
        setState(73);
        _la = _input->LA(1);
        if (!(_la == translatorParser::SUB

        || _la == translatorParser::ADD)) {
        _errHandler->recoverInline(this);
        }
        else {
          _errHandler->reportMatch(this);
          consume();
        }
      }
      setState(76);
      match(translatorParser::FLOAT);
      break;
    }

    case 4: {
      _localctx = _tracker.createInstance<translatorParser::VARIABLE_nodeContext>(_localctx);
      enterOuterAlt(_localctx, 4);
      setState(78);
      _errHandler->sync(this);

      _la = _input->LA(1);
      if (_la == translatorParser::SUB

      || _la == translatorParser::ADD) {
        setState(77);
        _la = _input->LA(1);
        if (!(_la == translatorParser::SUB

        || _la == translatorParser::ADD)) {
        _errHandler->recoverInline(this);
        }
        else {
          _errHandler->reportMatch(this);
          consume();
        }
      }
      setState(80);
      match(translatorParser::VAR);
      break;
    }

    default:
      break;
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- CompareContext ------------------------------------------------------------------

translatorParser::CompareContext::CompareContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}


size_t translatorParser::CompareContext::getRuleIndex() const {
  return translatorParser::RuleCompare;
}

void translatorParser::CompareContext::copyFrom(CompareContext *ctx) {
  ParserRuleContext::copyFrom(ctx);
}

//----------------- Compare_eq_nodeContext ------------------------------------------------------------------

tree::TerminalNode* translatorParser::Compare_eq_nodeContext::EQ() {
  return getToken(translatorParser::EQ, 0);
}

std::vector<translatorParser::Arth_exprContext *> translatorParser::Compare_eq_nodeContext::arth_expr() {
  return getRuleContexts<translatorParser::Arth_exprContext>();
}

translatorParser::Arth_exprContext* translatorParser::Compare_eq_nodeContext::arth_expr(size_t i) {
  return getRuleContext<translatorParser::Arth_exprContext>(i);
}

std::vector<tree::TerminalNode *> translatorParser::Compare_eq_nodeContext::LBR() {
  return getTokens(translatorParser::LBR);
}

tree::TerminalNode* translatorParser::Compare_eq_nodeContext::LBR(size_t i) {
  return getToken(translatorParser::LBR, i);
}

std::vector<translatorParser::Logic_exprContext *> translatorParser::Compare_eq_nodeContext::logic_expr() {
  return getRuleContexts<translatorParser::Logic_exprContext>();
}

translatorParser::Logic_exprContext* translatorParser::Compare_eq_nodeContext::logic_expr(size_t i) {
  return getRuleContext<translatorParser::Logic_exprContext>(i);
}

std::vector<tree::TerminalNode *> translatorParser::Compare_eq_nodeContext::RBR() {
  return getTokens(translatorParser::RBR);
}

tree::TerminalNode* translatorParser::Compare_eq_nodeContext::RBR(size_t i) {
  return getToken(translatorParser::RBR, i);
}

translatorParser::Compare_eq_nodeContext::Compare_eq_nodeContext(CompareContext *ctx) { copyFrom(ctx); }

